added angular material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <ngx-loading-bar [includeSpinner]=" false"></ngx-loading-bar>
+<button mat-stroked-button routerLink="">Home</button>
+<button mat-stroked-button routerLink="dashboard">Dashboard</button>
 <router-outlet></router-outlet>
